--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>On Scroll Animation</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./js/main.js" defer></script>
   </head>
   <body>
-    <section class="h-full flex v-center hidden">
-      <p>On Scroll Animation</p>
+    <section class="h-full flex v-center">
+      <p>Scroll Down</p>
     </section>
     <section class="h-full flex col v-center">
       <p>Social Media</p>
@@ -22,6 +23,5 @@
     <section class="h-full flex v-center hidden">
       <p>Thanks!</p>
     </section>
-    <script src="./js/app.js"></script>
   </body>
 </html>
