removed unnecessary parts

--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
-    <section class="h-full flex v-center">
-      <p>Scroll Down</p>
+    <section class="h-full flex v-center hidden">
+      <p>On Scroll Animation</p>
     </section>
+
     <section class="h-full flex col v-center">
       <p>Social Media</p>
+
       <section class="logos flex">
         <div class="logo hidden"></div>
         <div class="logo hidden"></div>
         <div class="logo hidden"></div>
       </section>
-    </section>
-    <section class="h-full flex v-center hidden">
-      <p>Thanks!</p>
     </section>
   </body>
 </html>
