added vertical transform

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
-    <section class="h-full flex v-center hidden">
+    <section class="flex h-full hero hidden">
       <p>On Scroll Animation</p>
     </section>
 
-    <section class="h-full flex col v-center">
+    <section class="flex h-full col v-center">
       <p>Social Media</p>
 
       <section class="logos flex">
